src/components/Header/Header.css
@import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@600&display=swap');

.header-container {
  display: flex;
  background-color: #030e17;
}
.app-title-container {
  width: 75%;
}

.logo-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 200px;
}
.header-logo {
  width: 150px;
  height: 75px;
}

.header {
  display: flex;
  width: 30%;
  justify-content: center;
  align-items: center;
}

.header .home-link {
  color: #ffffff;
  font-size: 2rem;
}

.heading-one {
  font-size: 2.5rem;
  font-family: 'Hepta Slab', serif;
  color: #ffffff;
  margin: 1rem 0rem 1rem 0.5rem;
}

.heading-two {
  font-size: 1.5rem;
  font-family: 'Hepta Slab', serif;
  color: #ffffff;
  margin: 1rem 0rem 1rem 0.5rem;
}

@media screen and (max-width: 650px) {
  .header-container {
    flex-direction: column;
    align-items: center;
    padding: 10px; /* Add some padding */
  }

  .logo-container {
    width: 100%; /* Adjust the width */
    align-items: center;
  }

  .header-logo {
    width: 100px; /* Resize the logo */
    height: 50px; /* Resize the logo */
  }

  .header {
    width: 100%; /* Adjust the width */
    justify-content: space-around; /* Adjust spacing */
  }

  .heading-one,
  .heading-two {
    text-align: center;
    font-size: 0.8rem;
  }

  .header .home-link {
    font-size: 0.9rem; /* Adjust the font size if necessary */
  }
}

